@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.1 2006/07/02 15:23:38 sem Exp $
+# $Id: Makefile,v 1.2 2006/07/02 15:30:38 sem Exp $
 
 MANDIR=		${PREFIX}/man/man
 
@@ -7,9 +7,10 @@ MAN1=		pkg_deinstall.1 \
 		pkg_glob.1 \
 		pkg_sort.1 \
 		pkgdb.1 \
+		pkgdu.1 \
 		portcvsweb.1 \
 		portsclean.1 \
-		portsdb.1 \
+		portsdu.1 \
 		portupgrade.1 \
 		portversion.1
 
