@@ -1,0 +1,26 @@
+.\" $Id$
+.\"
+.Dd July 09, 2008
+.Dt PKGDU 1
+.Os FreeBSD
+.Sh NAME
+.Nm pkgdu
+.Nd a tool to display packages disk usage size
+.Sh SYNOPSIS
+.Nm
+.Op Fl hbkmRrqs
+.Op Ar pkgname_glob
+.Sh DESCRIPTION
+.Nm
+displays a sum of file sizes for installed packages.
+.Pp
+This man page is incompleted. Contribute please.
+.Pp
+.Sh OPTIONS
+The following command line arguments are supported:
+.Pp
+.Sh SEE ALSO
+.Xr pkgdb 1 ,
+.Xr ports 7
+.Sh AUTHORS
+.An Sergey Matveychuk Aq sem@FreeBSD.org
